# cargo-get

./: Cargo.toml  README.md  action.yml
.github/workflows/: build-binary.yml  ci.yaml  github-actions.yml  release-on-tag.yml  release.yml
src/: cli.rs  delimiter.rs  error.rs  main.rs  output_format.rs  terminator.rs  version.rs
tests/: basics.rs  basics_deprecated.rs  delimiter.rs  failures.rs  inheritance.rs  multi_value.rs  terminator.rs  version.rs  workspace.rs
tests/data/toml_01/: Cargo.toml
tests/data/toml_02/: Cargo.toml
tests/data/toml_03/: Cargo.toml
tests/data/toml_04/: Cargo.toml
tests/data/toml_05/: Cargo.toml
tests/data/toml_06/: Cargo.toml
tests/data/workspace/: Cargo.toml
tests/data/workspace/pkg1/: Cargo.toml
tests/data/workspace/pkg2/: Cargo.toml
