[package]
name = "cargo-get"
version = "1.4.0"
authors = ["Nicolai Unrein <n.unrein@gmail.com>"]
edition = "2018"
description = "Cargo plugin to easily query information from Cargo.toml files"
license = "Apache-2.0/MIT"
categories = [
  "command-line-utilities",
  "config",
  "development-tools",
  "development-tools::cargo-plugins",
  "parsing",
]
keywords = ["binary", "cargo", "cli", "dev-tools", "query"]
readme = "README.md"
repository = "https://github.com/nicolaiunrein/cargo-get"
include = ["src/**/*", "README.md"]

[dependencies]
cargo_toml = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
semver = "1.0.26"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
