[package]
name = "test-name"
version = "1.2.3+build-2"
authors = ["John Doe<john-doe@abc.com>", "Jane Doe<jane-doe@def.com>"]
homepage = "crates.io"
edition = "2015"
links = "foo"
description = "A Very useful description"
license = "Apache-2.0/MIT"
categories = ["cli"]
keywords = ["binary", "cargo", "cli", "dev-tools", "query"]
readme = "README.md"
repository = "https://github.com/nicolaiunrein/cargo-get"

[dependencies]
cargo_toml = "0.8.1"
clap = "3.0.0-beta.2"
semver = "0.11.0"

[dev-dependencies]
assert_cmd = "1.0.1"
